--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
     <form action="/page2.html">
-        <h1>Cadastro</h1>
+        <h1>Realize seu cadastro</h1>
         <br>
         <label>Nome:</label>
         <br>
