--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <label>Data de nascimento:</label>
         <br>
         <input type="date">
-        <input type="submit" value="Enviar">
+        <input id="send" type="submit" value=">">
     </form>
     </div>
 
