--- a/index.html
+++ b/index.html
@@ -9,32 +9,24 @@
 <body>
     <div>
     <form action="/page2.html">
-        <h1>Realize seu cadastro</h1>
+        <h1>Cadastrar</h1>
         <br>
-        <label>Nome:</label>
+        <label>Nome</label>
         <br>
-        <input type="text" placeholder="Insira seu nome">
-        <br>
-        <br>
-        <label>Sobrenome:</label>
-        <br>
-        <input type="text" placeholder="Insira seu sobrenome">
+        <img id="user" src="/user-icon.jpg" alt="user-icon"><input type="text" placeholder="Insira seu nome completo">
         <br>
         <br>
-        <label>E-mail:</label>
+        <label>E-mail</label>
         <br>
         <input type="email" placeholder="Insira seu email">
         <br>
         <br>
-        <label>Senha:</label>
+        <label>Senha</label>
         <br>
         <input type="password" placeholder="Insira sua senha">
         <br>
         <br>
-        <label>Data de nascimento:</label>
-        <br>
-        <input type="date">
-        <input id="send" type="submit" value=">">
+        <button id="send" type="submit">Cadastrar</button>
     </form>
     </div>
 
