--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <br>
         <label>Nome</label>
         <br>
-        <img id="user" src="/user-icon.jpg" alt="user-icon"><input type="text" placeholder="Insira seu nome completo">
+        <input type="text" placeholder="Insira seu nome completo">
         <br>
         <br>
         <label>E-mail</label>
@@ -28,7 +28,9 @@
         <br>    
         <button id="send" type="submit">Cadastrar</button>
     </form>
+    <footer>
+        Desenvolvido por guigui
+    </footer>
     </div>
-
 </body>
 </html>
