--- a/page2.html
+++ b/page2.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina de agradecimento</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    Cadastro realizado com sucesso.
+    <div>
+        <h1>U ARE SPECIAL</h1>
+        <img src="never-forget.gif" alt="gif">
+        <h2>Passe o mouse onde o dedo aponta</h2>
+    </div>
+    
 </body>
 </html>
