--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <br>
         <label>Nome</label>
         <br>
-        <input type="text" placeholder="Insira seu nome completo">
+        <input type="text" placeholder="Insira seu nome completo" novalidate>
         <br>
         <br>
         <label>E-mail</label>
         <br>
-        <input type="email" placeholder="Insira seu email">
+        <input type="email" placeholder="Insira seu email" novalidate>
         <br>
         <br>
         <label>Senha</label>
         <br>
-        <input type="password" placeholder="Insira sua senha">
+        <input type="password" placeholder="Insira sua senha" novalidate>
         <br>
         <br>    
         <button id="send" type="submit">Cadastrar</button>
